Add Gradle plugin. | Push poorly written test can down the road another ten years (C) whatthecommit.com